maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:11: error: not enough arguments for method marquer: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
  marquer();
         ^JediEscaper:36: error: ambiguous reference to overloaded definition,
both method aMurOuest in class JediEscaper of type (x: Int, y: Int)Boolean
and  method aMurOuest in class JediEscaper of type (x: Int, y: Int)Boolean
match argument types (Int,Int)
    if ( !aMurOuest(x,y) ){
          ^JediEscaper:46: error: not found: value aMurEst
    if ( !aMurEst(x,y) ){
          ^JediEscaper:74: error: method aMurOuest is defined twice
  conflicting symbols both originated in file 'plm.runtime1.JediEscaper'
	def aMurOuest(x:Int, y:Int):Boolean = hasLeftWall(x, y)
            ^